# AndroidDemo

./: .gitignore  1-说明  1-说明.txt
1-AndroidKey/: mykey.jks
1-Signature/: 1-说明
ActivityDemo/: build.gradle  settings.gradle
AppDemo/: build.gradle
BinderClientDemo/: settings.gradle
BinderDemo/: settings.gradle
BinderServerDemo/: settings.gradle
BroadcastReceiver/: build.gradle  settings.gradle
BroadcastReceiver2/: settings.gradle
BroadcastSender/: build.gradle  settings.gradle
ClipboardDemo/: settings.gradle
ConfigurationDemo/: settings.gradle.kts
ContentProviderDemo/: settings.gradle
ContentResolverDemo/: build.gradle  settings.gradle
DataPersistence/: settings.gradle
DatabaseDemo/: settings.gradle
Development/: Development.apk
DialogDemo/: settings.gradle
EventListenerDemo/: settings.gradle
GetServiceDemo/: settings.gradle
HandWriteDemo/: settings.gradle
HandlerDemo/: settings.gradle
ImageViewDemo/: settings.gradle
InterfaceDemo/: settings.gradle
JNI/: 说明
JNI/JNIByCMakeDemo/app/src/main/jni/: CMakeLists.txt  com_demoapp_jnibycmakedemo_HelloJNI.h  jni-utils.c
JsonDemo/: settings.gradle
KotlinDemo/: settings.gradle.kts
LayoutDemo/: settings.gradle
LibDemo/: settings.gradle
LibTestDemo/: settings.gradle
LifecycleDemo/: build.gradle  settings.gradle
LockDemo/: settings.gradle
MultiThreadDemo/: settings.gradle
ParallelWindowDemo/: settings.gradle
PermissionDemo/: build.gradle.kts  settings.gradle.kts
Receiver2/: settings.gradle
ScreenDemo/: settings.gradle
ScrollViewDemo/: settings.gradle
(+725 files in other folders)
